# InterfaceBase

./: CMakeLists.txt  interface_base.pc.in
src/include/: InterfaceBase.hpp
